# Nova

./: .coveragerc  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.nginx  README-agents.md  README-askuser.md  README-dev.md  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: django.yml  docker-image.yml  vendor-assets.yml
.kilocode/rules/: environment.md  restricted_files.md
docker/: .env.example  Dockerfile  README.md  docker-compose.add-exec-runner.dev.yml  docker-compose.add-exec-runner.from-source.yml  docker-compose.add-exec-runner.yml  docker-compose.add-judge0.yml  docker-compose.add-langfuse.yml  docker-compose.add-llamacpp-embeddings-host.yml  docker-compose.add-llamacpp-embeddings.yml  docker-compose.add-llamacpp.yml  docker-compose.add-ollama.yml  docker-compose.add-pgadmin.yml  docker-compose.add-searnxg.yml  docker-compose.add-searxng.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.from-source.yml  docker-compose.minimal.yml  docker-compose.yml  entrypoint.sh  nginx.conf
docker/from-source/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/judge0/: judge0.conf
docker/minimal/: docker-compose.yml
docker/nginx/: nginx.conf
docker/ollama/: ollama_entrypoint.sh
docker/searxng/: settings.yml
nova/: admin.py  agent_execution.py  agent_markdown.py  apps.py  asgi.py  bootstrap.py  celery.py  checkpoint_doc.md  consumers.py  context_processors.py  external_files.py  file_utils.py  forms.py  howto_memory.md  llm_agent.py  message_artifacts.py  message_attachments.py  message_composer.py  message_panel.py  message_rendering.py  message_submission.py  message_tail_service.py  message_utils.py  middleware.py  models.py  multimodal_prompts.py  native_provider_runtime.py  provider_capability_profile.py  routing.py  settings.py  settings_test.py  signals.py  tasks.py  thread_titles.py  turn_inputs.py  urls.py  utils.py
nova/api/: serializers.py  urls.py  views.py
nova/api_tools/: __init__.py  service.py
nova/caldav/: __init__.py  service.py
nova/continuous/: checkpoint_state.py  context_builder.py  message_ingest.py  utils.py
nova/exec_runner/: __init__.py  docker_backend.py  proxy.py  server.py  service.py  shared.py
nova/llm/: agent_middleware.py  checkpoints.py  embeddings.py  exceptions.py  hybrid_search.py  llm_agent.py  llm_tools.py  openrouter.py  prompts.py  provider_validation.py  skill_policy.py  skill_runtime_tools.py  skill_tool_filter.py  summarization_middleware.py  tool_error_handling.py
nova/mcp/: __init__.py  client.py  oauth_service.py  service.py
nova/memory/: __init__.py  service.py
nova/migrations/: 0001_initial.py  0002_agent_tool_description.py  0003_userparameters_langfuse_host_and_more.py  0004_task.py  0005_alter_tool_input_schema_alter_tool_output_schema.py  0006_add_transport_type_to_tool.py  0007_alter_userparameters_langfuse_host.py  0007_llmprovider_max_context_tokens_message_internal_data_and_more.py  0008_agent_recursion_limit.py  (+77 more)
plans/: cache_optimization.md  continuous_discussion.md  embeddings.md  memory.md  multi_tenancy_guardrails.md  react_terminal.md  react_terminal_v2.md  realtime_contracts.md  reconnect-streaming-on-page-return.md  skill_middleware_mail.md  task_engine.md  task_templates.md  task_templates_spam_mailbox_locking.md  tool_loading.md
scripts/: check_vendor_assets.sh  update_vendor_assets.sh
user_settings/: README.md  apps.py  forms.py  mixins.py  urls.py
(+464 files in other folders)
